Do not use SchemaPath in PayloadCreator
A simple absolute SchemaNodeIdentifier does the same trick.

Change-Id: I78e7aba50afcbb95d51b2519c62dd4f3140f4d82
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>